# 3IABD2---Projet-annuel

./: .gitignore  GBO_tests.py  README.md  UI.py  dossier_enregistrements.txt  etape_1.pages  requirements.txt  test.py  testing_library_interops.py
UI/: .gitignore  UI.py  dossier_config_et_consignes.txt  dossier_enregistrements.txt  lib.py  mlp_use_template.ipynb  mlp_use_template.py  save_folder.txt
database/: .gitignore  copy_paste_db.py  resizing.ipynb  scrapping_algo.py  search_history.xlsx  url_json_downloads.py
database/scripts/: resizing.ipynb  scrapping_algo.py  scrapping_notebook.ipynb  search_result.json
documentation/implementation/: demo_numba.py  interops_python.py  (+7 more)
implementation_dataset/: mlp_dataset.ipynb  mlp_dataset_bigger_batch.ipynb  mlp_dataset_bigger_batch_RBF.ipynb  mnist_model.ipynb  saved_accuracy.txt  saved_pmc_50_50_05_07  tensorflow_dataset.ipynb
journal de bord GB/: 2023.03.10.txt
rust_lib/: .gitignore  Cargo.toml  old_code.rs
rust_lib/deprecated/: lib.rs  main.rs
rust_lib/src/: lib.rs  lib_refactor_in_progress.rs  linearModel.rs  main.rs  multyLayerPerceptron.rs  multy_layer_perceptron.rs
tests_interops/: interops_linear_model.py  notebook_test_interops.ipynb  notebook_test_interops_linear_classification.ipynb  notebook_test_interops_linear_regression.ipynb  notebook_test_interops_pmc_classification.ipynb  notebook_test_interops_pmc_regression.ipynb  notebook_test_interops_rbf_classification.ipynb  notebook_test_interops_rbf_naif_classification.ipynb  notebook_test_interops_rbf_naif_regression.ipynb  test_tensorflow_pmc.ipynb
(+19 files in other folders)
