[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib_refactor_in_progress.rs"
# path = "src/tests.rs"

[dependencies]
rand = "0.8.3"
plotters = "0.3.1"
nalgebra = "0.32.2"
tensorboard-rs = "0.5.9"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
fast-math = "0.1"